# py-datasync

./: README.md  chunk_generator.py  client.py  client_2.py  data-check.proto  data_check_pb2.py  data_check_pb2_grpc.py  local_storage_scan.py  patch.sh  pyproject.toml  requirements.txt  server.py  storge_cdc.py  storge_rsync.py  transform_data_class.py  upload_client.py
config/: client.ini  server.ini
internal/chunk/: base_hasher.py  base_spliter.py
src/client/: chunk_generator.py  upload_client.py
src/common/dataclass/: transform_data_class.py
src/common/grpc/: data-check.proto  data_check_pb2.py  data_check_pb2_grpc.py
src/server/: local_storage_scan.py  storge_cdc.py  storge_rsync.py
test/rawtcp/: c.py  s.py
